<resources>
    <string name="app_name">Менеджер финансов</string>
    <string name="title_home">Главная</string>
    <string name="title_history">История</string>
    <string name="title_stat">Статистика</string>
    <string name="balance">Баланс</string>
    <string name="deposit">Deposit:</string>
    <string name="income_text">Доходы:</string>
    <string name="expenses_text">Расходы:</string>
    <string name="sum_balance_text">Всего:</string>
    <string name="salary">Зарплата</string>
    <string name="part_time_job">Подработка</string>
    <string name="other_income">Другое</string>
    <string name="food_text">Продукты</string>
    <string name="add_expenses">Добавить категорию</string>
    <string name="choose_delete_dialog">Вы действительно хотите удалить категорию </string>
    <string name="cancel_button">Нет</string>
    <string name="submit_button">Да</string>
    <string name="text_change_name_category">Редактирование названия категории </string>
    <string name="text_name_category">Название категории</string>
    <string name="text_name_category_two">Название категории:</string>
    <string name="submit_category_name_button">Применить</string>
    <string name="type_operation">Тип операции</string>
    <string name="category_operation">Категория:</string>
    <string name="text_amount">50000 ₽</string>
    <string name="date_operation">28.03.2021</string>
    <string name="history_operation">Операции за текущий месяц:</string>
    <string name="titile_info_message">Информационное сообщение</string>
    <string name="expenses">Расходы</string>
    <string name="income">Доходы</string>
    <string name="title_create_expense">Добавить расход: </string>
    <string name="title_create_income">Добавить доход: </string>
    <string name="create_expense_amount">Сумма:</string>
    <string name="create_expense_message">Сообщение:</string>
    <string name="hint_amount_expenses">500.00</string>
    <string name="example_message">На работу</string>
    <string name="add_expenses_button">Добавить</string>
    <string name="cancel_expenses_button">Отмена</string>
    <string name="empty_amount">Сумма доходов/расходов не должна быть пустой</string>
    <string name="ok">Ок</string>
    <string name="create_new_category_title">Создание новой категории</string>
    <string name="empty_name_category">Название категории не должно быть пустым</string>
    <string name="title_delete_finance_operation">Вы действительно хотите удалить эту операцию?</string>
    <string name="zero">0.00</string>
    <string name="text_title_linear_chart">График изменения баланса за текущий месяц</string>
</resources>