<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="57.63dp"
    android:background="@drawable/shadow_background_gray">

    <TextView
        android:id="@+id/type_operation"
        style="@style/CategoryText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/type_operation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_operation"
        style="@style/CategoryText"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginEnd="160dp"
        android:gravity="center"
        android:scrollbars="horizontal|none"
        android:text="@string/category_operation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_operation"
        style="@style/CategoryText"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginEnd="42dp"
        android:gravity="center"
        android:text="@string/date_operation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_amount" />

    <TextView
        android:id="@+id/text_amount"
        style="@style/BalanceTextStyle"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        android:gravity="center"
        android:text="@string/text_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_info_message"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>