<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="192dp">

    <TextView
        android:id="@+id/text_category_change"
        style="@style/ExpensesText"
        android:layout_width="300dp"
        android:layout_height="104dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lines="4"
        android:scrollbars="vertical|none"
        android:text="@string/text_change_name_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name_category"
        android:layout_width="144dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/text_name_category"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_category_change" />

    <Button
        android:id="@+id/button_submit_name_category"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="64dp"
        android:text="@string/submit_category_name_button"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_name_category"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>