<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_choose_delete_layout"
    android:layout_width="match_parent"
    android:layout_height="170dp">

    <TextView
        android:id="@+id/textViewChooseDelete"
        style="@style/ExpensesText"
        android:layout_width="296dp"
        android:layout_height="99dp"
        android:gravity="center"
        android:lines="4"
        android:scrollbars="vertical|none"
        android:text="@string/choose_delete_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseDelete"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.850"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseDelete"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>