<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DAEEFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DAEEFF"
            tools:context=".ui.home.HomeFragment">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/balance_layout"
                android:layout_width="376dp"
                android:layout_height="190dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shadow_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <EditText
                    android:id="@+id/text_inc"
                    android:layout_width="85dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="top|left"
                    android:inputType="numberDecimal"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textColor="#008000"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/text_exp"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/text_exp"
                    android:layout_width="85dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="top|left"
                    android:inputType="numberDecimal"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textColor="#D60D0D"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/text_all"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/text_all"
                    android:layout_width="85dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="48dp"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="top|left"
                    android:inputType="numberDecimal"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.anychart.AnyChartView
                    android:id="@+id/pie_chart_view"
                    android:layout_width="199dp"
                    android:layout_height="167dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.028"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.521" />

                <TextView
                    android:id="@+id/text_balance"
                    style="@style/TopTextStyle"
                    android:layout_width="151dp"
                    android:layout_height="53dp"
                    android:gravity="center"
                    android:text="@string/balance"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.853"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.029" />

                <TextView
                    android:id="@+id/income_text"
                    style="@style/BalanceTextStyle"
                    android:layout_width="90dp"
                    android:layout_height="28dp"
                    android:layout_marginBottom="104dp"
                    android:text="@string/income_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.671"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/expenses_text"
                    style="@style/BalanceTextStyle"
                    android:layout_width="90dp"
                    android:layout_height="28dp"
                    android:layout_marginBottom="76dp"
                    android:text="@string/expenses_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.671"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/sum_balance_text"
                    style="@style/BalanceTextStyle"
                    android:layout_width="90dp"
                    android:layout_height="28dp"
                    android:layout_marginBottom="48dp"
                    android:text="@string/sum_balance_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.671"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="376dp"
                android:layout_height="156dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/shadow_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance_layout">

                <TextView
                    android:id="@+id/income_text_second"
                    style="@style/TopTextStyle"
                    android:layout_width="139dp"
                    android:layout_height="52dp"
                    android:text="@string/income_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.174"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.153" />

                <Button
                    android:id="@+id/button_other_income"
                    android:layout_width="140dp"
                    android:layout_height="52dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/other_income"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.833"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button_part_time_job"
                    android:layout_width="140dp"
                    android:layout_height="52dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/part_time_job"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.175"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button_salary"
                    android:layout_width="140dp"
                    android:layout_height="52dp"
                    android:layout_marginBottom="84dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/salary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.833"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expense_layout"
                android:layout_width="376dp"
                android:layout_height="240dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/shadow_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/expenese_text_second"
                    style="@style/TopTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.143"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.057" />

                <Button
                    android:id="@+id/add_category_button"
                    android:layout_width="146dp"
                    android:layout_height="52dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:text="@string/add_expenses"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.841"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.023" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/button_list_expenses"
                    android:layout_width="353dp"
                    android:layout_height="167dp"
                    android:layout_marginBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:reverseLayout="true"
                    app:stackFromEnd="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>